# edio3

./: .gitignore  Cargo.toml  edio3.pyi  pyproject.toml
benchmarks/: bench_parsing.py
src/: lib.rs  main.rs
