[package]
name = "edio3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "edio3"
crate-type = ["cdylib"]

[dependencies]
edi = { version = "0.2.0", path = "../edi" }
pyo3 = "0.18.1"
pythonize = "0.18.0"
serde = "1.0.160"
