[package]
name = "edio3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "edio3"
crate-type = ["cdylib"]

[dependencies]
edi = { git = "https://github.com/lenzo202/edi.git" }
pyo3 = {version = "0.18.1", features = ["serde"]}
pythonize = "0.18.0"
serde = "1.0.160"
serde_json = "1.0.96"
